Fixed logo width on mobile. Added description in 'References'. Changed array.push() for array.unshift() so the new object is added at the beginning of the array

--- a/objetos/css/css.css
+++ b/objetos/css/css.css
@@ -128,3 +128,7 @@ progress::-moz-progress-bar {
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#9CECFB', endColorstr='#0052D4', GradientType=0);
   border-radius: 9px;
 }
+
+.envase {
+  max-width: 340px;
+}
